# SDAIE

./: README.md  backbone_train.py  bc_eval.py  bc_train.py  config.py  oc_funs.py  oc_main.py  pyproject.toml  script.sh  utils.py
Classifier/: Net.py  __init__.py  vit.py
